fix folder stretching problem

--- a/app.css
+++ b/app.css
@@ -613,6 +613,7 @@ html, body {
             inset 0 1px 0 rgba(255, 255, 255, 0.1);
     padding: 1.5rem;
     border-radius: 15px;
+    justify-items: center;
 }
 
 .project-title h3, .project-card p {
@@ -647,12 +648,12 @@ html, body {
 .folder-wrapper {
     position: relative;
     width: 100%;
-    height: 400px;
+    max-width: 340px;
+    height: auto;
     display: flex;
     flex-direction: column;
     z-index: 0;
-    margin-bottom: 15rem;
-    scroll-margin-top: 8rem;
+    margin: 0 auto 15rem;
 }
 
 .folder-wrapper:last-of-type {
@@ -708,7 +709,7 @@ html, body {
 .folder-img {
     position: relative;
     flex: 1;
-    max-width: 350px;
+    max-width: 300px;
     outline: 1px solid rgba(240, 248, 255, 0.7);
     outline-offset: 5px;
     border-radius: 10px;
