--- a/responsive.css
+++ b/responsive.css
@@ -245,3 +245,10 @@
         height: 10px;
     }
 }
+
+
+/* PROJECT STYLES */
+
+@media screen and (min-width: 425px) {
+    
+}
